# parallel-prog

./: flake.nix
cuda-matmul/: .gitignore  CMakeLists.txt  Makefile  avx.cpp  cublas.cu  generate_matrix.sh  matmul.cu  matrix.cpp  matrix.hpp  matrix.hpps  naive.cu  platform.h  random_float_matrix.py  run.sh  sequential.cpp  shared.cu  table.py
cuda-max-thread-block/: .gitignore  Makefile  compile_commands.json  incrementArray.cu  run.sh
cuda-minimal/: .gitignore  Makefile  compile_commands.json  minimal.cu  run.sh
mpi-collective-comunication/: Makefile  main.c
mpi-deadlock/: .gitignore  Makefile  mixed-collective-barrier.c  mixed-collective-deadlock.c  opposite-order-barrier.c  opposite-order-deadlock.c  run-mix-barrier.sh  run-mix-deadlock.sh  run-opposite-barrier.sh  run-opposite-deadlock.sh
mpi-dynamic-process/: .gitignore  Makefile  child.c  parent.c  run.sh
mpi-matmul/: .gitignore  Makefile  generate_matrix.sh  main.c  matrix.c  matrix.h  random_float_matrix.py  run.sh
mpi-process-group/: main.c  run.sh
mpi-process-topologies/: main.c
mpi-test/: main.c
